# haskell-playground

./: .gitignore  README.md  haskell-playground.cabal  stack.yaml
src/: Chapter2.hs  Chapter3.hs  Debug.hs  Main.hs
src/Aoc/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day8.hs
src/Book/: Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter4Pres.hs
