name:                haskell-playground
version:             0.1.0.0
homepage:            https://github.com/karl-run/haskell-playground#readme
author:              Karl J. Overå
maintainer:          k@rl.run
copyright:           2022 Karl J. Overå
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Debug
                       Book.Chapter2
                       Book.Chapter3
                       Book.Chapter4
                       Aoc.Day1
                       Aoc.Day2
                       Aoc.Day3
                       Aoc.Day4
                       Aoc.Day5
                       Aoc.Day6
                       Aoc.Day8
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.3.5,
                       containers >= 0.6.5.1
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
